--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "css-loader": "^7.1.2",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-hook-form": "^7.53.2",
+    "@react-input/mask": "^2.0.4",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
@@ -66,6 +67,7 @@
     "@babel/preset-react": "^7.26.3",
     "@svgr/webpack": "^8.1.0",
     "@types/jwt-decode": "^3.1.0",
+    "@types/react-input-mask": "^3.0.6",
     "@types/react-slick": "^0.23.13",
     "babel-loader": "^9.2.1",
     "html-webpack-plugin": "^5.6.0",
